# libzakformgdaex

./: Makefile.am  configure.ac  libzakformgdaex.pc.in
src/: Makefile.am  form.c  form.h  libzakformgdaex.h
